--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           dotnet-version: 8.0.x
       - name: Run build
-        run: dotnet build
+        run: dotnet build CSTrainer.sln
       - name: Create output directory
         run: |
           mkdir -p output/OpenPrefirePrac
